@@ -545,7 +545,7 @@ Failed: error 127 at offset 13: conditional group contains more than two branche
 Failed: error 127 at offset 12: conditional group contains more than two branches
 
 /(?(1a)/
-Failed: error 126 at offset 4: malformed number or name after (?(
+Failed: error 114 at offset 6: missing closing parenthesis
 
 /(?(1a))/
 Failed: error 126 at offset 4: malformed number or name after (?(
@@ -14401,6 +14401,9 @@ Failed: error 106 at offset 353: missing terminating ] for character class
 ------------------------------------------------------------------
 
 /(?R-:(?</
+Failed: error 114 at offset 8: missing closing parenthesis
+
+/(?R-:(?<)/
 Failed: error 129 at offset 3: (?R or (?[+-]digits must be followed by )
 
 /(?(?C{\Q})(?!(?'/
@@ -14502,7 +14505,7 @@ No match
  0: ab
 
 /(?(8000000000/
-Failed: error 161 at offset 13: number is too big
+Failed: error 114 at offset 13: missing closing parenthesis
 
 /((?(R8000000000)))/
 Failed: error 161 at offset 16: number is too big
